Updating GraphViz class and JAR generation